// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upgrade help logs a warning when \`scriptPreprocessor\` and/or \`preprocessorIgnorePatterns\` are used 1`] = `
"[33m[1m[1m●[1m Deprecation Warning[22m:

  Option [1m\\"preprocessorIgnorePatterns\\"[22m was replaced by [1m\\"transformIgnorePatterns\\"[22m, which support multiple preprocessors.

  Jest now treats your current configuration as:
  {
    [1m\\"transformIgnorePatterns\\"[22m: [1m[\\"bar/baz\\", \\"qux/quux\\"][22m
  }

  Please update your configuration.

  [1mConfiguration Documentation:[22m
  https://facebook.github.io/jest/docs/configuration.html
[39m"
`;

exports[`preset throws when preset not found 1`] = `
"<red>● Validation Error:

  Preset doesnt-exist not found.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
</>"
`;

exports[`rootDir throws if the config is missing a rootDir property 1`] = `
"<red>● Validation Error:

  Configuration option rootDir must be specified.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
</>"
`;

exports[`testEnvironment throws on invalid environment names 1`] = `
"<red>● Validation Error:

  Test environment phantom cannot be found. Make sure the testEnvironment configuration option points to an existing node module.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
</>"
`;

exports[`testMatch throws if testRegex and testMatch are both specified 1`] = `
"<red>● Validation Error:

  Configuration options testMatch and testRegex cannot be used together.

  Configuration Documentation:
  https://facebook.github.io/jest/docs/configuration.html
</>"
`;
